:lipstick: Update description

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -5,6 +5,6 @@
   },
   "extDesc": {
     "description": "The description of the application, displayed in the web store.",
-    "message": "Give a fresh look to your new tab page. Be inspired with the beautiful backgrounds, inspirational quotes, subtle weather forecasts, set reminders, to-do lists and much more."
+    "message": "Transform your new tabs. Be inspired with the beautiful backgrounds, inspirational quotes, weather forecasts, to-do lists and more."
   }
 }
