:lipstick: Update description

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -5,6 +5,6 @@
   },
   "extDesc": {
     "description": "The description of the application, displayed in the web store.",
-    "message": "Transform your new tabs. Be inspired with the beautiful backgrounds, inspirational quotes, weather forecasts, sticky notes, to-do lists and more."
+    "message": "Transform your new tabs. Be inspired with the beautiful backgrounds, quotes, weather, sticky notes, to-do list and more."
   }
 }
